--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,4 +1,12 @@
-
-.font{
+.font {
   font-size: 100px;
+}
+
+.life-test {
+  font-weight: 900;
+  font-size: 50px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
