--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -10,3 +10,25 @@
   justify-content: center;
   align-items: center;
 }
+
+.user {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin: 50px 20px;
+  flex-wrap: wrap;
+}
+
+.cardsss {
+  width: 30%;
+}
+
+.product-end {
+  display: flex;
+  justify-content: space-between;
+}
+
+.register{
+  display: flex;
+  justify-content: space-between;
+}
